ThirdPartyNotices.txt作成用のコマンドを作成

--- a/src/MediSignVerifier/MediSignVerifier.csproj
+++ b/src/MediSignVerifier/MediSignVerifier.csproj
@@ -20,6 +20,9 @@
     <tags>署名XML 検証</tags>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MediSignVerifier</Title>
+    <PackageProjectUrl>https://github.com/findex-inc/MediSignVerifier</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.1|AnyCPU'">
@@ -49,6 +52,17 @@
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
     <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
