--- a/src/EPDVerifyCmd/EPDVerifyCmd.csproj
+++ b/src/EPDVerifyCmd/EPDVerifyCmd.csproj
@@ -5,7 +5,21 @@
     <TargetFramework>net6.0</TargetFramework>
     <Copyright>Copyright 2023+ Findex Inc.</Copyright>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <PackageProjectUrl>https://github.com/findex-inc/MediSignVerifier</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
