--- a/src/EPDVerifyCmd/EPDVerifyCmd.csproj
+++ b/src/EPDVerifyCmd/EPDVerifyCmd.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <Copyright>Copyright 2023+ Findex Inc.</Copyright>
+    <Copyright>Copyright 2025+ Findex Inc.</Copyright>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <PackageProjectUrl>https://github.com/findex-inc/MediSignVerifier</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -33,6 +33,9 @@
 
   <ItemGroup>
     <None Update="nlog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ThirdPartyNotices.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
